# pidash

./: .gitignore  .gitmodules  LICENSE  README.md  example.sh  main.py  pi_run.sh  pi_setup.sh  pi_test.sh  pyproject.toml  run.sh  setup.sh
.github/workflows/: pylint.yml
src/pidash/: __init__.py  __main__.py  app.py  assets.py  dashboard.py  display.py  emulator.py  location.py  settings.py  system.py  weather.py
src/pidash/assets/fonts/: README.md
src/pidash/assets/fonts/open-sans/: README.md
src/pidash/assets/fonts/weather-icons/: LICENSE  README.md
